--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -20,3 +20,20 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 15px;
 }
+
+.menu {
+  margin-top: 30px;
+}
+
+.nav-link {
+  padding: 5px;
+  margin: 10px;
+  color: white;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 5px;
+}
+
+.active {
+  background-color: rgba(0, 0, 0, 0.226);
+}
